<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/camera_chan"
        android:background="#E5303030"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="162dp"
        android:alpha="0.5">

        <Button
            android:id="@+id/back_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="Back"
            android:textSize="10dp"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="Next"
            android:textSize="10dp"
            app:layout_constraintHorizontal_bias=".65"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/control_panel"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="#E5303030"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/systemHaltButton"
        app:layout_constraintStart_toEndOf="@+id/burgerButton"
        android:alpha="0.5">


        <Switch
            android:id="@+id/doorsSwitch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/open_door"
            android:textColor="@color/ButtonTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/roofSwitch"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0.75"/>

        <Switch
            android:id="@+id/roofSwitch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/open_roof"
            android:textColor="@color/ButtonTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/extendPadSwitch"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/doorsSwitch"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0.75"/>

        <Switch
            android:id="@+id/extendPadSwitch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/extend_pad"
            android:textColor="@color/ButtonTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/raisePadSwitch"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/roofSwitch"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0.75"/>

        <Switch
            android:id="@+id/raisePadSwitch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/raise_pad"
            android:textColor="@color/ButtonTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/extendPadSwitch"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0.75"/>
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/burgerButton"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/hamburger_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/control_panel"
        app:layout_constraintVertical_bias="0.0"
        android:alpha="0.5"/>

    <Button
        android:id="@+id/systemHaltButton"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/system_halt_button"
        android:padding="0dp"
        android:text="@string/system_halt"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:alpha="0.5"
        />




</android.support.constraint.ConstraintLayout>